@@ -12,3 +12,4 @@ Remove TemporalFuncion alias
 Remove [gs]etOptimizationSolver methods
 Rename AnalyticalNumericalMath*Implementation to SymbolicEvaluation|Gradient|Hessian
 Remove deprecated KarhunenLoeveP1Factory, KarhunenLoeveQuadratureFactory
+Remove deprecated GramSchmidtAlgorithm, ChebychevAlgorithm
