@@ -1,3 +1,3 @@
-algo=class=OrthonormalizationAlgorithm implementation=class=GramSchmidtAlgorithm measure=class=Triangular name=Triangular dimension=1 a=-1 m=0.3 b=1
+algo=class=OrthonormalizationAlgorithm implementation=class=AdaptiveStieltjesAlgorithm measure=class=Triangular name=Triangular dimension=1 a=-1 m=0.3 b=1 monicRecurrenceCoefficients=[class=NumericalPoint name=Unnamed dimension=3 values=[1,-0.1,0]] monicSquaredNorms=class=NumericalPoint name=Unnamed dimension=1 values=[1] isElliptical=false
 measure=class=Triangular name=Triangular dimension=1 a=-1 m=0.3 b=1
 new measure=class=Triangular name=Triangular dimension=1 a=-1 m=-0.2 b=1
